# termux-web-scraper-example

./: .gitignore  LICENSE  README.md
loop_error_ignore/: pyproject.toml  run.sh
loop_error_ignore/src/: loop_error_ignore.py
py_framework/: pyproject.toml  run.sh
simple/: pyproject.toml  run.sh
simple/src/: simple.py
