[tool.poetry]
name = "termux-web-scraper-example-loop-error-ignore"
version = "0.1.0"
description = "Web scraping example with intentional error in a loop."
authors = ["kpliuta <9212935+kpliuta@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
